# stoneSeries2.0

./: Api.js  CMakeLists.txt  Home.qml  Main.qml  Navbar.qml  README.md  Search.qml  main.cpp
components/: ShowCard.qml
components/atoms/: AppTitle.qml  AvatarImage.qml  CalendarIcon.qml  EditUserNameInput.qml  EditUserNameLabel.qml  EpisodeListLink.qml  ErrorMessage.qml  FavShowButton.qml  GenresIcon.qml  LogoIcon.qml  Mask.qml  NotFoundDescription.qml  NotFoundImage.qml  RatingIcon.qml  SaveSettingsButton.qml  SaveSettinsButton.qml  SeasonInfo.qml  SettingsAvatar.qml  SettingsImageLoaderButton.qml  SettingsImageLoaderIcon.qml  SettingsTitle.qml  SettingsUserName.qml  ShowDetailsImage.qml  ShowDetailsRating.qml  ShowDetailsStatus.qml  ShowDetailsTitle.qml  ShowImage.qml  ShowRating.qml  ShowTitle.qml  SinopseDescription.qml  SinopseTitle.qml  TrendingIcon.qml  TrendingTitle.qml  UserNameInfo.qml  UserOptionsBackground.qml
components/molecules/: CelebrityBirthday.qml  CelebrityCard.qml  CelebrityCountry.qml  CelebrityDeathday.qml  CelebrityInfoContainer.qml  CelebrityShow.qml  FavCount.qml  FavShowButton.qml  GenresInfo.qml  ImdbButton.qml  NoCast.qml  NoFavListShow.qml  NoShows.qml  NotFoundMolecule.qml  RatingMolecule.qml  Search.qml  SearchIcon.qml  SettingsImageLoaderButton.qml  ShowDetailsDescription.qml  ShowDetailsYears.qml  Sinopse.qml  ThemeButton.qml  TrendingHeader.qml  UserAvatarCard.qml  UserOptionsActions.qml
components/organisms/: CastCard.qml  CelebrityDetailsInfo.qml  CelebrityDetailsInfoCard.qml  CelebrityShowsList.qml  EpisodeInfo.qml  HomeCard.qml  InfoCard.qml  Navbar.qml  SettingsCard.qml  ShowCard.qml  ShowDetailsDescriptionCard.qml  ShowDetailsInfo.qml  TrendingCards.qml  UserOptions.qml
components/pages/: CelebrityDetails.qml  EpisodeDetails.qml  EpisodeList.qml  FavShows.qml  Home.qml  NotFound.qml  Results.qml  Settings.qml  ShowDetails.qml
components/templates/: CelebrityDetailsTemplate.qml  EpisodeDetailsTemplate.qml  EpisodeListTemplate.qml  FavShowsTemplate.qml  HomeTemplate.qml  NotFoundTemplate.qml  ResultsTemplate.qml  SettingsTemplate.qml  ShowDetailsTemplate.qml
controllers/: apicontroller.cpp  apicontroller.h  searchcontroller.cpp  searchcontroller.h
pages/: FavShows.qml  Home.qml  NotFound.qml  Results.qml  Settings.qml  Show.qml
